<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/questionlistforegroundcolor"
    android:elevation="16dp"
    tools:context="joneros.jenny.quizzit.CreateGameFragment"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="81dp">

    <!-- TODO: Update blank fragment layout -->

    <Button
        android:id="@+id/btn_shareGroup"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/floatingbuttoncolor"
        android:text="@string/text_share"
        app:layout_constraintEnd_toStartOf="@+id/btn_saveGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_addNewQuestion"
        app:layout_constraintTop_toBottomOf="@+id/etxt_description" />

    <EditText
        android:id="@+id/etxt_groupName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/questionlistitemcolor"
        android:ems="10"
        android:hint="@string/hint_name"
        android:inputType="textPersonName"
        android:padding="8sp"
        android:textAlignment="center"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etxt_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:background="@color/questionlistitemcolor"
        android:ems="10"
        android:hint="@string/hint_description"
        android:inputType="textPersonName"
        android:padding="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_groupName" />

    <Button
        android:id="@+id/btn_deleteGroup"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/floatingbuttoncolor"
        android:text="@string/text_delete"
        app:layout_constraintEnd_toStartOf="@+id/btn_addNewQuestion"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etxt_description" />

    <Button
        android:id="@+id/btn_addNewQuestion"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/floatingbuttoncolor"
        android:text="@string/text_add_new_question"
        app:layout_constraintEnd_toStartOf="@+id/btn_shareGroup"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_deleteGroup"
        app:layout_constraintTop_toBottomOf="@+id/etxt_description" />

    <Button
        android:id="@+id/btn_saveGroup"
        style="@android:style/Widget.Material.Button.Colored"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:backgroundTint="@color/floatingbuttoncolor"
        android:text="@string/text_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/btn_shareGroup"
        app:layout_constraintTop_toBottomOf="@+id/etxt_description" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/questionList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginEnd="0dp"
        android:layout_marginTop="16dp"
        android:background="@color/questionlistbackgroundcolor"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_saveGroup"
        tools:listitem="@layout/question_in_game_item" />

</android.support.constraint.ConstraintLayout>
